--- a/index.css
+++ b/index.css
@@ -82,7 +82,6 @@ h1 {
     .row{
         display: flex;
         flex-direction: column;
-        overflow-y: scroll;
     }
     .container {
         background: linear-gradient(135deg, #4cd4c9, #5df196);
@@ -93,6 +92,18 @@ h1 {
         border-radius: 20px;
         text-align: center;
         align-items: center;
+        padding: 50px 20px;
+        border-radius: 0%;
+       
+    }
+    .image-temp img{
+        width: 50%;
+        height: auto;
+    }
+    .humidity img,.wind img{
+        width: 30px;
+        height: 25px;
+        margin-top: 5px;
     }
     
   }
